force-app/main/default/objects/Utter_Sense_Audio_Recorder_Configs__mdt/Utter_Sense_Audio_Recorder_Configs__mdt.object-meta.xml
<CustomObject>
    <description>Contains the configuration details of the Utter Sense Audio Recorder component.</description>
    <label>Utter Sense Audio Recorder Config</label>
    <pluralLabel>Utter Sense Audio Recorder Configs</pluralLabel>
</CustomObject>