force-app/main/default/objects/Utter_Sense_Audio_Recorder_Configs__mdt/fields/Auth_URL__c.field-meta.xml
<CustomField>
    <fullName>Auth_URL__c</fullName>
    <description>URL for the authentication endpoint used for retrieving an access token to use the messaging API.</description>
    <label>Auth URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>