force-app/main/default/objects/Utter_Sense_Audio_Recorder_Configs__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>This is the base url for the SCRT endpoint. This is retrieved from the embedded service deployment configs. Make sure to include &quot;/iamessage/api/v2&quot; at the end of the URL.</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>