force-app/main/default/objects/Utter_Sense_Audio_Recorder_Configs__mdt/fields/Bot_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Bot_Developer_Name__c</fullName>
    <description>The developer name for the Agentforce agent.</description>
    <label>Bot Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>