force-app/main/default/objects/Utter_Sense_Audio_Recorder_Configs__mdt/fields/Capabilities_Version__c.field-meta.xml
<CustomField>
    <fullName>Capabilities_Version__c</fullName>
    <description>The capabilities version of the messaging API. Required parameter for the API call. Usually set to &quot;1&quot;.</description>
    <label>Capabilities Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>