force-app/main/default/objects/Utter_Sense_Audio_Recorder_Configs__mdt/fields/Certificate_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_API_Name__c</fullName>
    <description>API name of the certificate that is being used to sign the JWT.</description>
    <label>Certificate API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>