force-app/main/default/objects/Utter_Sense_Audio_Recorder_Configs__mdt/fields/Conversation_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Endpoint__c</fullName>
    <description>Conversation endpoint of the messaging API. Should be &quot;conversation&quot; but adding as config just in case it changes in the future.</description>
    <label>Conversation Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>