force-app/main/default/objects/Utter_Sense_Audio_Recorder_Configs__mdt/fields/Message_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Message_Endpoint__c</fullName>
    <description>Endpoint for sending messages to the messaging API. Should be &quot;/conversation/{{conversationId}}/message&quot; but adding as a config just in case it changes in the future.</description>
    <label>Message Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>