force-app/main/default/objects/Utter_Sense_Audio_Recorder_Configs__mdt/fields/Token_Expiration_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiration_in_Seconds__c</fullName>
    <description>Duration in seconds for the JWT token to expire. JWT is used as a bearer when generating a messaging API auth token.</description>
    <label>Token Expiration in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>